--- a/test-cases.yml
+++ b/test-cases.yml
@@ -1,32 +1,63 @@
 ---
 - summary: |
-    Краткое описание тест кейса. Пример: Проверка входа пользователя с существующими логином и паролем
+    Проверка возможности поиска товаров по ключевому слову или категории.
   requirement: |
-    Тестируемое требование. Например: При верном вводе логине и пароля пользователь должен войти в систему
+    При верном вводе ключевого слова пользователю должны показаться нужные товары.
   prerequisites: |
-    Это условия, которые необходимы для проведения тест кейса. Они должны быть выполнены еще до запуска тест кейса.
-    Например: открыта страница логина
+    Открыта страница поиска товаров.
   test-data: |
-    Тестовые данные
-    Логин = ilona Пароль = password
+    Ключевое слово = Iphone 9
   steps:
-    - Вводим логин
-    - Вводим пароль
-    - Нажимаем кнопку "Войти"
+    - Вводим ключевое слово
+    - Нажимаем кнопку "Поиск"
   expected-result: |
-    Пользователь должен попасть на главную страницу
+    Пользователь должен увидеть карточку Iphone 9
+
 
 - summary: |
-    Проверка входа пользователя с несуществующими логином и паролем
+    Проверка возможности фильтрации товаров.
   requirement: |
-    При неправильном логине или пароле пользователь должен получить сообщение об ошибке
-  prerequisites:
-    Открыта страница логина
+    При верном вводе параметров фильтрации должны показаться нужные товары.
+  prerequisites: |
+    Открыта страница поиска товаров.
   test-data: |
-    Логин = Логин = hexlet Пароль = badpass
+    Категория фильтрации: Apple
   steps:
-    - Вводим логин
-    - Вводим пароль
-    - Нажимаем кнопку "Войти"
+    - Выыбираем категорию Apple
   expected-result: |
-    Пользователь должен попасть на главную страницу
+    Пользователь должен увидеть карточки товаров, входящих в категорию Aplle
+
+
+- summary: |
+
+
+- summary: |
+    Проверка возможности просматривать товары и просматривать подробную информацию о товаре
+  requirement: |
+    При нажатии на карточку товара, пользователь должен увидеть подробную информацию о нем
+  prerequisites: |
+    Открыта страница каталога товаров
+  test-data: |
+    Выбранный товар
+  steps:
+    - Выбираем карточку товара
+    - Нажимаем на кнопку "добавить в корзину"
+    - Перейти в корзину
+    - Проверить наличие товаров в корзине
+  expected-result: |
+    Пользователь должен увидеть подробную информацию о выбранном товаре
+
+
+- summary: |
+    Проверка возможности добавлять товары в корзину и просматривать содержимое корзины
+  requirement: |
+    При нажатии пользователем на кнопку добавления товара в корзину, товар попадает в корзину
+  prerequisites: |
+    Открыта страница каталога товаров
+  test-data: |
+    Открыта страница поиска товаров
+  steps:
+    - Выбираем карточку товара
+    - Нажимаем на нее
+  expected-result: |
+    Пользователь должен увидеть подробную информацию о выбранном товаре
