--- a/test-cases.yml
+++ b/test-cases.yml
@@ -59,5 +59,6 @@
   steps:
     - Выбираем карточку товара
     - Нажимаем на нее
+    - Смотрим подробную информацию о товаре
   expected-result: |
     Пользователь должен увидеть подробную информацию о выбранном товаре
