--- a/requirements.yml
+++ b/requirements.yml
@@ -4,6 +4,8 @@ functional:
   - Пользователь должен иметь возможность фильтровать товары
   - Пользователь должен иметь возможность просматривать товары и просматривать подробную информацию о товаре
   - Пользователь должен иметь возможность добавлять товары в корзину и просматривать содержимое корзины
+  - На сайте должна быть возмоность регистрации 
+
 non-functional:
   - Сайт должен быть способен обрабатывать большое количество трафика
   - Веб-сайт должен быть разработан с учетом удобства использования и оптимизирован для скорости работы.
@@ -12,5 +14,4 @@ non-functional:
   - Сайт должен быть доступен на различных устройствах
   - Сайт должен быть безопасным и защищать данные пользователя.
 implicit:
-  - Сайт должен корректно открываться на Lenovo Tab 3
   - В каталоге присутствует более 45 позиций
