--- a/testing-report.yml
+++ b/testing-report.yml
@@ -14,3 +14,8 @@
 - summary: |
     Проверка возможности добавлять товары в корзину и просматривать содержимое корзины
   status: pass
+
+- summary: |
+    Проверка возможности зарегестрироваться на сайте
+  status: fail
+
