--- a/testing-report.yml
+++ b/testing-report.yml
@@ -5,7 +5,7 @@
 
 - summary: |
     Проверка возможности фильтрации товаров.
-  status: passs
+  status: pass
 
   - summary: |
     Проверка возможности просматривать товары и просматривать подробную информацию о товаре
